# KPCLibPy

./: .gitignore  README.md  README.rst  keepass.ipynb  pyproject.toml  requirements.txt  setup.cfg  setup.py  test.py
kpclibpy/: __init__.py  __main__.py  kpclib.py  nubia_context.py  nubia_plugin.py  unit_test.ipynb
kpclibpy/commands/: __init__.py  database_cmds.py  keepass.py
kpclibpy/commands/entry/: entry_commands.py
kpclibpy/commands/group/: group_commands.py
kpclibpy/kpclib/: kpclib.py
kpclibpy/tests/: db_test.py
notebook/: keepass.ipynb
passxyz/: nubia_context.py  nubia_main.py  nubia_statusbar.py  unit_test.ipynb
passxyz/commands/: database_cmds.py  keepass.py
passxyz/commands/entry/: entry_commands.py
passxyz/commands/group/: group_commands.py
passxyz/kpclibpy/: __init__.py  kpclib.py
passxyz/tests/: conftest.py  db_test.py
scripts/: keepass  kp_debug
src/: nubia_context.py  nubia_main.py  nubia_plugin.py  nubia_statusbar.py  unit_test.ipynb
src/commands/: database_cmds.py  keepass.py
src/commands/entry/: __init__.py  entry_commands.py
src/commands/group/: group_commands.py
src/kpclibpy/: kpclib.py
src/tests/: conftest.py  db_test.py  pwentry_test.ipynb
test/: pass_d_E8f4pEk.xyz  test.py  utdb.kdbx
