[options]
packages =
    kpclibpy
    kpclibpy.commands
    kpclibpy.commands.entry
    kpclibpy.commands.group
    kpclibpy.kpclib
python_requires = >=3.6
install_requires=
    pycparser==2.20
    pythonnet==2.5.2
    python-nubia==0.2b5
setup_requires =
    setuptools_scm >= 1.15
include_package_data = True

[options.entry_points]
console_scripts =
    keepass = kpclibpy.__main__:main